--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kabir
 description: Uni CS student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://KabirsBlog.github.io/images/Cards.png
 
 #
 # Flags below are optional
